<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/lavender"
    android:layout_height="match_parent">

    <!-- Material Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/deep_purple"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Difficulty Selection -->
    <TextView
        android:id="@+id/difficultyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/difficulty_label"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/difficultyLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Topic Selection -->
    <TextView
        android:id="@+id/topicLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/topic_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difficultySpinner" />

    <Spinner
        android:id="@+id/topicSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topicLabel" />

    <!-- Question Type Selection -->
    <TextView
        android:id="@+id/questionTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/question_type_label"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/topicSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/questionTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/questionTypeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Question Count Selection -->
    <TextView
        android:id="@+id/questionCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/question_count_label"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/questionTypeSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/numOfQuestionSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/questionCountLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Time Selection -->
    <TextView
        android:id="@+id/timeLimitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Please select the time"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/numOfQuestionSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Timer Label -->
    <TextView
        android:id="@+id/timerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Timer (10-30s): 20s"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/timeLimitLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- SeekBar -->
    <SeekBar
        android:id="@+id/timerSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="20"
        android:progress="10"
        app:layout_constraintTop_toBottomOf="@id/timerLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_button"
        app:layout_constraintTop_toBottomOf="@id/timerSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
